minor: QuizService 메서명 오기입 수정
findByCurriculumIdAndLevel -> findAllByCurriculumIdAndLevel